added home controller and adjusted readme

--- a/hw1/app/views/layouts/application.html.erb
+++ b/hw1/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <div>
+      <h1><%= link_to "Kathy's Kitchen", root_path %></h1>
+    </div>
     <%= yield %>
   </body>
 </html>
